--- a/ReproductorMusica/.classpath
+++ b/ReproductorMusica/.classpath
@@ -7,5 +7,12 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="Libreria/mysql-connector-java-5.1.16-bin.jar"/>
+	<classpathentry kind="lib" path="/Users/ikerrodriguez/Downloads/LibreriaAudio/commons-logging-api.jar"/>
+	<classpathentry kind="lib" path="/Users/ikerrodriguez/Downloads/LibreriaAudio/jaudiotagger-2.0.4.jar"/>
+	<classpathentry kind="lib" path="/Users/ikerrodriguez/Downloads/LibreriaAudio/jl1.0.jar"/>
+	<classpathentry kind="lib" path="/Users/ikerrodriguez/Downloads/LibreriaAudio/mp3spi1.9.4.jar"/>
+	<classpathentry kind="lib" path="/Users/ikerrodriguez/Downloads/LibreriaAudio/tritonus_share.jar"/>
+	<classpathentry kind="lib" path="/Users/ikerrodriguez/Downloads/LibreriaAudio/mp3agic2-0.8.1.jar"/>
+	<classpathentry kind="lib" path="/Users/ikerrodriguez/Downloads/ReproductorMP3/librerias/basicplayer3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
