--- a/ReproductorMusica/.project
+++ b/ReproductorMusica/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ReproductorMusica</name>
+	<name>persona5</name>
 	<comment></comment>
 	<projects>
 	</projects>
