--- a/ReproductorMusica/.classpath
+++ b/ReproductorMusica/.classpath
@@ -6,6 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="Test"/>
 	<classpathentry kind="lib" path="Libreria/basicplayer3.jar"/>
 	<classpathentry kind="lib" path="Libreria/commons-logging-api.jar"/>
 	<classpathentry kind="lib" path="Libreria/jaudiotagger-2.0.4.jar"/>
@@ -14,5 +15,6 @@
 	<classpathentry kind="lib" path="Libreria/mp3spi1.9.4.jar"/>
 	<classpathentry kind="lib" path="Libreria/mysql-connector-java-5.1.16-bin.jar"/>
 	<classpathentry kind="lib" path="Libreria/tritonus_share.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
